# universal-software-kit

./: .gitignore  .gitmodules  AppIcon.icns  CMakeLists.txt  Info.plist  LICENSE  MyScene.esc  README.md  RunWinTest.bat  Test.py  Untitled.esc  cone.blend  cube.fbx  imgui.ini  little.txt  smoothTorus.fbx  torus.fbx
src/editor/: AppIcon.icns  CMakeLists.txt  Info.plist  editor.h  editor_application.cpp  editor_application.h  editor_entry.cpp  editor_main.cpp  prefix_editor.h
src/editor-extension/: CMakeLists.txt  editor_app_init.h  editor_extension.h  editor_vector_dsc.h  editor_vector_functions.cpp
src/editor-extension/default-types/: editor_def_basic_shapes.cpp  editor_def_basic_shapes.h  editor_def_res_image.cpp  editor_def_res_image.h  editor_def_res_mesh.cpp  editor_def_res_mesh.h  editor_def_res_svg.cpp  editor_def_res_svg.h  editor_def_transform.h
src/editor-extension/ui/: editor_ext_ui.cpp  editor_ext_ui.h  editor_ext_viewport.cpp  editor_ext_viewport.h  editor_ext_viewport_tools.cpp  editor_ext_viewport_tools.h  editor_ui_register.h
src/editor-extension/ui/imgui/: editor_ext_imgui_text_copy.cpp  editor_ext_imgui_text_copy.h
src/editor-extension/ui/viewport/: editor_ext_camera_controls.cpp  editor_ext_camera_controls.h  editor_ext_camera_cotrols.h  editor_ext_selection_context.cpp  editor_ext_selection_context.h  editor_ext_viewport.cpp  editor_ext_viewport.h  editor_ext_viewport_manager.cpp  editor_ext_viewport_manager.h  editor_ext_viewport_tools.cpp  editor_ext_viewport_tools.h
src/editor-rendering/: CMakeLists.txt  editor_rendering.h  editor_rendering_entry.cpp
src/editor/application/: CMakeLists.txt  MaterialIcons-Regular.h  Roboto-Regular.h  editor_application.cpp  editor_application.h  editor_icons_material_design.h  entry.cpp
src/editor/extension/: TODO
src/editor/graphics/: editor_buffer.cpp  editor_buffer.h  editor_camera.cpp  editor_camera.h  editor_light.h  editor_render_command_queue.cpp  editor_render_command_queue.h  editor_render_context.cpp  editor_render_context.h  editor_renderer.cpp  editor_renderer.h  editor_shader.cpp  editor_shader.h  editor_shader_uniforms.h  editor_texture.cpp  editor_texture.h  editor_ui_renderer.cpp  editor_ui_renderer.h
src/editor/platform/: editor_platform.h
src/editor/platform/macos/: editor_platform_macos.mm
src/editor/platform/opengl/: editor_opengl_buffer.cpp  editor_opengl_buffer.h  editor_opengl_render_context.cpp  editor_opengl_render_context.h  (+4 more)
src/editor/ui-fields/: editor_basic_object_view.cpp  editor_basic_object_view.h  editor_basic_register_view.cpp  editor_basic_register_view.h  editor_extension_view.cpp  editor_extension_view.h  editor_resource_view.cpp  editor_resource_view.h  editor_ui_fields.cpp  editor_ui_fields.h
src/extension/: CMakeLists.txt  engine_extension.h  engine_extension_register.h  extension_manager.cpp  extension_manager.h
src/extension-examples/: CMakeLists.txt  example1.cpp  example2.cpp  exmaple1.cpp  extrusion.cpp  feli_stuff.cpp  midi_controll.cpp  rendering_tests.cpp  show_image.cpp  technical_drawing.cpp  ui_show.cpp
src/extension/impl/: CMakeLists.txt  engine_ui_impl_imgui.cpp  engine_ui_impl_imgui.h
src/extension/tasks/: extension_task.cpp  extension_task.h
src/extension/ui/: engine_ext_ui.cpp  engine_ext_ui.h
src/interface/: CMakeLists.txt  interface_functions.cpp  interface_functions.h  interface_register_socket.cpp  interface_register_socket.h  prefix_interface.h
src/interface/resource_types/: interface_rt_txt.cpp  interface_rt_txt.h
src/interface/socket/: interface_register_connection.cpp  interface_register_connection.h  interface_register_socket.cpp  interface_register_socket.h  interface_socket.cpp  interface_socket.h
src/interface/util/: interface_util.cpp  interface_util.h
src/scripting/: CMakeLists.txt  engine_script_context.cpp  engine_script_context.h  engine_scripting_manager.cpp  engine_scripting_manager.h  prefix_scripting.h
src/scripting/chai/: engine_chai_context.cpp  engine_chai_context.h
src/scripting/lua/: engine_lua_context.cpp  engine_lua_context.h
src/scripting/tasks/: brainstorm.bs  extension_task.cpp  extension_task.h
src/shared/: CMakeLists.txt  prefix_shared.h
src/shared/event/: engine_event_descriptor.cpp  engine_event_descriptor.h  engine_event_dispatcher.cpp  engine_event_dispatcher.h
src/shared/file/: engine_file.cpp  engine_file.h  engine_file_collection.cpp  engine_file_collection.h  engine_folder.cpp  engine_folder.h  engine_shared_buffer.cpp  engine_shared_buffer.h
src/shared/logging/: engine_logging.cpp  engine_logging.h
src/shared/macros/: engine_basic_macros.h  engine_storage_macro.h
src/shared/register/: engine_data_handle.cpp  engine_data_handle.h  engine_descriptor.h  engine_deserializer.cpp  engine_deserializer.h  engine_register.cpp  engine_register.h  engine_scene.cpp  engine_scene.h  engine_serializer.cpp  engine_serializer.h  engine_type_register.cpp  engine_type_register.h
src/shared/resource/: engine_resource_manager.cpp  engine_resource_manager.h  engine_resource_storage_link.cpp  engine_resource_storage_link.h
src/shared/storage/: engine_storage_description.cpp  engine_storage_description.h  engine_storage_macro.h  engine_storage_values.cpp  engine_storage_values.h  imgui.ini
src/shared/template/: usefull_templates.h
src/tests/: CMakeLists.txt  test_engine_base64.cpp  test_engine_events.cpp  test_engine_extension.cpp  test_engine_file.cpp  test_engine_interface.cpp  test_engine_register.cpp  test_engine_resource.cpp  test_scene_deletion.cpp
src/util/: CMakeLists.txt  prefix_util.h
src/util/exception/: engine_exception.cpp  engine_exception.h
src/util/file/: engine_base64.cpp  engine_base64.h  engine_file.cpp  engine_file.h  engine_file_collection.cpp  engine_file_collection.h  engine_folder.cpp  engine_folder.h  engine_shared_buffer.cpp  engine_shared_buffer.h
src/util/logging/: engine_logging.cpp  engine_logging.h
src/util/socket/: util_socket.cpp  util_socket.h
src/util/string/: util_string.cpp  util_string.h
src/util/template/: usefull_templates.h
(+42 files in other folders)
